Server: Improve some comments and Java 9 constructs